--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Odin Recipes</title>
         <meta charset="utf-8">
+        <link rel="icon" type="image.jpg" href="imagens/odin-logo.svg">
+        <title>As receitas de Odin</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">lasagna</a>
+        <center><h1>Receitas de Odin</h1>
+            <p><img src="imagens/lasanha.jpeg" width="300" alt="lasanha"></p>
+            <p><a href="recipes/lasagna.html">Lasanha</p></a>
+            <p><img src="imagens/Empadão de Frango.jpg" width="300" alt="empadão de frango"></p>
+            <p><a href="recipes/Empadão.html">Empadão de Frango</p></a>
+            <p><img src="imagens/Bolo de Chocolate.jpg" width="300" alt="Bolo de Chocolate"></p>
+            <p><a href="recipes/bolo.de.chocolate.html">Bolo de Chocolate</p></a>
+        </center>
     </body>
 </html>
