--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <title>As receitas de Odin</title>
     </head>
     <body>
-        <center><h1>Receitas de Odin</h1>
+        <img src="/Projetos/odin_recipes-main/imagens/odin-logo.svg" width="20" alt=odin.logo>
+        <center>
+            <h1>Receitas de Odin</h1>
             <p><img src="imagens/lasanha.jpeg" width="300" alt="lasanha"></p>
             <p><a href="recipes/lasagna.html">Lasanha</p></a>
             <p><img src="imagens/Empadão de Frango.jpg" width="300" alt="empadão de frango"></p>
@@ -15,4 +17,5 @@
             <p><a href="recipes/bolo.de.chocolate.html">Bolo de Chocolate</p></a>
         </center>
     </body>
+    <img src="/Projetos/odin_recipes-main/imagens/odin-logo.svg" width="20" alt=odin.logo>
 </html>
