--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p><img src="imagens/lasanha.jpeg" width="300" alt="lasanha"></p>
             <p><a href="recipes/lasagna.html">Lasanha</p></a>
             <p><img src="imagens/Empadão de Frango.jpg" width="300" alt="empadão de frango"></p>
-            <p><a href="recipes/Empadão.html">Empadão de Frango</p></a>
+            <p><a href="recipes/empadão.html">Empadão de Frango</p></a>
             <p><img src="imagens/Bolo de Chocolate.jpg" width="300" alt="Bolo de Chocolate"></p>
             <p><a href="recipes/bolo.de.chocolate.html">Bolo de Chocolate</p></a>
         </center>
