--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <img src="/Projetos/odin_recipes-main/imagens/odin-logo.svg" width="20" alt=odin.logo>
         <center>
             <h1>Receitas de Odin</h1>
-            <p><img src="imagens/lasanha.jpeg" width="300" alt="lasanha"></p>
+            <p><img src="lasanha.jpeg" width="300" alt="lasanha"></p>
             <p><a href="recipes/lasagna.html">Lasanha</p></a>
             <p><img src="imagens/Empadão de Frango.jpg" width="300" alt="empadão de frango"></p>
             <p><a href="recipes/empadão.html">Empadão de Frango</p></a>
