--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <img src="/Projetos/odin_recipes-main/imagens/odin-logo.svg" width="20" alt=odin.logo>
         <center>
             <h1>Receitas de Odin</h1>
-            <p><img src="imagens/lasanha.jpeg" width="300" alt="lasanha"></p>
+            <p><img src="lasanha.jpeg" width="300" alt="lasanhaa"></p>
             <p><a href="recipes/lasagna.html">Lasanha</p></a>
-            <p><img src="imagens/Empadão de Frango.jpg" width="300" alt="empadão de frango"></p>
-            <p><a href="recipes/Empadão.html">Empadão de Frango</p></a>
-            <p><img src="imagens/Bolo de Chocolate.jpg" width="300" alt="Bolo de Chocolate"></p>
+            <p><img src="Empadão de Frango.jpg" width="300" alt="empadão de frango"></p>
+            <p><a href="recipes/empadão.html">Empadão de Frango</p></a>
+            <p><img src="Bolo de Chocolate.jpg" width="300" alt="Bolo de Chocolate"></p>
             <p><a href="recipes/bolo.de.chocolate.html">Bolo de Chocolate</p></a>
         </center>
     </body>
