--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>As receitas de Odin</title>
     </head>
     <body>
-        <img src="/Projetos/odin_recipes-main/imagens/odin-logo.svg" width="20" alt=odin.logo>
+        <img src="/Projetos/odin.recipes/imagens/odin-logo.svg" width="20" alt=odin.logo>
         <center>
             <h1>Receitas de Odin</h1>
             <p><img src="lasanha.jpeg" width="300" alt="lasanhaa"></p>
@@ -17,5 +17,5 @@
             <p><a href="recipes/bolo.de.chocolate.html">Bolo de Chocolate</p></a>
         </center>
     </body>
-    <img src="/Projetos/odin_recipes-main/imagens/odin-logo.svg" width="20" alt=odin.logo>
+    <img src="/Projetos/odin.recipes/imagens/odin-logo.svg" width="20" alt=odin.logo>
 </html>
