--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Lasanha</title>
-        <link rel="icon" type="image.jpg" href="/Projetos/odin_recipes-main/imagens/lasanha-logo.png">
+        <link rel="icon" type="image.jpg" href="/Projetos/odin.recipes/imagens/lasanha-logo.png">
     </head>
     <body>
         <center>
             <h1>Lasanha</h1>
-            <img src="/Projetos/odin_recipes-main/imagens/lasanha.jpeg" width="400" alt="lasanha">
+            <img src="/Projetos/odin.recipes/imagens/lasanha.jpeg" width="400" alt="lasanha">
             <h2>Sabia que a lasanha é um prato superfamoso no mundo inteiro? Um clássico! Vai perder?</h2>
             <hr>
-                <img src="/Projetos/odin_recipes-main/imagens/relogio-logo.png" width="25" alt="relógio">
+                <img src="/Projetos/odin.recipes/imagens/relogio-logo.png" width="25" alt="relógio">
                 50 minutos
-                <img src="/Projetos/odin_recipes-main/imagens/prato-logo.png" width="25" alt="prato">
+                <img src="/Projetos/odin.recipes/imagens/prato-logo.png" width="25" alt="prato">
                 15 porções
             <hr>
         </center>
@@ -50,7 +50,7 @@
             <li>Finalize com o queijo ralado e leve ao forno alto (220° C), preaquecido, por cerca de 20 minutos.</li>
         </ol>
         <center>
-            <a href="/Projetos/odin_recipes-main/index.html">Volte para as Receitas Principais</a>
+            <a href="/Projetos/odin.recipes/index.html">Volte para as Receitas Principais</a>
         </center>
     </body>
 </html>
