--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
         <title>As receitas de Odin</title>
     </head>
     <body>
-        <img src="/Projetos/odin.recipes/imagens/odin-logo.svg" width="20" alt=odin.logo>
+        <img src="recipes/imagens/odin-logo.svg" width="20" alt=odin.logo>
         <center>
             <h1>Receitas de Odin</h1>
-            <p><img src="lasanha.jpeg" width="300" alt="lasanhaa"></p>
+            <p><img src="recipes/imagens/lasanha.jpeg" width="300" alt="lasanhaa"></p>
             <p><a href="recipes/lasagna.html">Lasanha</p></a>
-            <p><img src="Empadão de Frango.jpg" width="300" alt="empadão de frango"></p>
+            <p><img src="recipes/imagens/Empadão de Frango.jpg" width="300" alt="empadão de frango"></p>
             <p><a href="recipes/empadão.html">Empadão de Frango</p></a>
-            <p><img src="Bolo de Chocolate.jpg" width="300" alt="Bolo de Chocolate"></p>
+            <p><img src="recipes/imagens/Bolo de Chocolate.jpg" width="300" alt="Bolo de Chocolate"></p>
             <p><a href="recipes/bolo.de.chocolate.html">Bolo de Chocolate</p></a>
         </center>
     </body>
-    <img src="/Projetos/odin.recipes/imagens/odin-logo.svg" width="20" alt=odin.logo>
+    <img src="recipes/imagens/odin-logo.svg" width="20" alt=odin.logo>
 </html>
