--- a/recipes/bolo.de.chocolate.html
+++ b/recipes/bolo.de.chocolate.html
@@ -2,18 +2,18 @@
 <html>
     <head>
         <meta charset="utf-u">
-        <link rel="icon" type="image.jpg" href="/Projetos/odin_recipes-main/imagens/bolo-logo.png">
+        <link rel="icon" type="image.jpg" href="imagens/bolo-logo.png">
         <title>Bolin de Chocolate</title>
     </head>
     <body>
         <center>
             <h1>Bolo de Chocolate</h1>
-            <img src="/Projetos/odin_recipes-main/imagens/Bolo de Chocolate.jpg" width="400" alt="bolo de chocolate">
+            <img src="imagens/Bolo de Chocolate.jpg" width="400" alt="bolo de chocolate">
             <h2>Se existe algo melhor, eu desconheço.</h2>
             <hr>
-            <img src="/Projetos/odin_recipes-main/imagens/relogio-logo.png" width="25" alt="relógio">
+            <img src="imagens/relogio-logo.png" width="25" alt="relógio">
             40 minutos
-            <img src="/Projetos/odin_recipes-main/imagens/prato-logo.png" width="25" alt="prato">
+            <img src="imagens/prato-logo.png" width="25" alt="prato">
             40 porções
             <hr>
         </center>
@@ -42,7 +42,7 @@
             <li>Despeje quente sobre o bolo já assado.</li>
         </ol>
         <center>
-            <a href="/Projetos/odin_recipes-main/index.html">Volte para as Receitas de Odin</a>
+            <a href="index.html">Volte para as Receitas de Odin</a>
         </center>
     </body>
 </html>
