--- a/recipes/empadão.html
+++ b/recipes/empadão.html
@@ -2,18 +2,18 @@
 <html>
     <head>
         <meta charset="utf-u">
-        <link rel="icon" type="image.jpg" href="/Projetos/odin_recipes-main/imagens/empadão-logo.jpg">
+        <link rel="icon" type="image.jpg" href="imagens/empadão-logo.jpg">
         <title>Empadão de Frango</title>
     </head>
     <body>
         <center>
             <h1>Empadão de Frango</h1>
-            <img src="/Projetos/odin_recipes-main/imagens/Empadão de Frango.jpg" width="400" alt="Empadão">
+            <img src="imagens/Empadão de Frango.jpg" width="400" alt="Empadão">
             <h2>Empadão com recheio de frango! Qualquer outro recheio está errado!</h2>
             <hr>
-            <img src="/Projetos/odin_recipes-main/imagens/relogio-logo.png" width="25" alt="relógio">
+            <img src="imagens/relogio-logo.png" width="25" alt="relógio">
             120 minutos
-            <img src="/Projetos/odin_recipes-main/imagens/prato-logo.png" width="25" alt="prato">
+            <img src="imagens/prato-logo.png" width="25" alt="prato">
             12 porções
             <hr>
         </center>
