--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="icon" type="image.jpg" href="imagens/odin-logo.svg">
+        <link rel="icon" type="image.jpg" href="recipes/imagens/odin-logo.svg">
         <title>As receitas de Odin</title>
     </head>
     <body>
