--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -50,7 +50,7 @@
             <li>Finalize com o queijo ralado e leve ao forno alto (220° C), preaquecido, por cerca de 20 minutos.</li>
         </ol>
         <center>
-            <a href="...index.html">Volte para as Receitas Principais</a>
+            <a href="../index.html">Volte para as Receitas Principais</a>
         </center>
     </body>
 </html>
