--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=devide-width, initial-scale=1.0">
         <link rel="icon" type="image.jpg" href="recipes/imagens/odin-logo.svg">
         <title>As receitas de Odin</title>
     </head>
