--- a/recipes/empadão.html
+++ b/recipes/empadão.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-u">
+        <meta name="viewport" content="width=devide-width, initial-scale=1.0">
         <link rel="icon" type="image.jpg" href="imagens/empadão-logo.jpg">
         <title>Empadão de Frango</title>
     </head>
@@ -56,8 +57,5 @@
             <li>Use metade da massa para forrar a assadeira e a outra para cobrir o recheio.</li>
             <li>Pincele o empadão com a gema e leve ao forno médio (180° C), preaquecido, por aproximadamente 40 minutos.</li>
         </ol>
-        <center>
-            <a href="/Projetos/odin_recipes-main/index.html">Volte para as Receitas de Odin</a>
-        </center>
     </body>
 </html>
