--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=devide-width, initial-scale=1.0">
         <title>Lasanha</title>
         <link rel="icon" type="image.jpg" href="imagens/lasanha-logo.png">
     </head>
@@ -49,8 +50,5 @@
             <li>Repita as camadas até a borda do recipiente.</li>
             <li>Finalize com o queijo ralado e leve ao forno alto (220° C), preaquecido, por cerca de 20 minutos.</li>
         </ol>
-        <center>
-            <a href="../index.html">Volte para as Receitas Principais</a>
-        </center>
     </body>
 </html>
