--- a/recipes/bolo.de.chocolate.html
+++ b/recipes/bolo.de.chocolate.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-u">
+        <meta name="viewport" content="width=devide-width, initial-scale=1.0">
         <link rel="icon" type="image.jpg" href="imagens/bolo-logo.png">
         <title>Bolin de Chocolate</title>
     </head>
@@ -41,8 +42,5 @@
             <li>Em uma panela, leve a fogo médio o chocolate em pó, a manteiga e o leite, deixe até ferver.</li>
             <li>Despeje quente sobre o bolo já assado.</li>
         </ol>
-        <center>
-            <a href="index.html">Volte para as Receitas de Odin</a>
-        </center>
     </body>
 </html>
